# CatchRobo-r08

install/: local_setup.sh  setup.sh
install/atcan_bridge/lib/atcan_bridge/: atcan_bridge_node
install/atcan_bridge/share/ament_index/resource_index/package_run_dependencies/: atcan_bridge
install/atcan_bridge/share/ament_index/resource_index/parent_prefix_path/: atcan_bridge
install/atcan_bridge/share/atcan_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atcan_bridge/share/atcan_bridge/cmake/: atcan_bridgeConfig-version.cmake  atcan_bridgeConfig.cmake
install/atcan_bridge/share/atcan_bridge/environment/: ament_prefix_path.dsv  path.dsv
install/atcan_bridge/share/atcan_bridge/launch/: atcan_bridge.launch.py
install/robstride_core/include/robstride_core/robstride_core/msg/: mit_cmd.h  mit_cmd.hpp
install/robstride_core/lib/robstride_core/: at_bridge_cmd2at
install/robstride_core/share/ament_index/resource_index/package_run_dependencies/: robstride_core
install/robstride_core/share/robstride_core/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robstride_core/share/robstride_core/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_robstride_core__rosidl_generator_cExport-noconfig.cmake  export_robstride_core__rosidl_generator_cExport.cmake  export_robstride_core__rosidl_typesupport_fastrtps_cppExport.cmake  robstride_core__rosidl_typesupport_cExport-noconfig.cmake  robstride_core__rosidl_typesupport_introspection_cExport-noconfig.cmake  robstride_core__rosidl_typesupport_introspection_cExport.cmake  robstride_core__rosidl_typesupport_introspection_cppExport-noconfig.cmake  robstride_core__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robstride_core/share/robstride_core/msg/: GoalEvent.idl
log/: latest_build
src/atcan_bridge/: CMakeLists.txt  package.xml
src/atcan_bridge/include/atcan_bridge/: atcan_bridge.hpp
src/atcan_bridge/launch/: atcan_bridge.launch.py
src/atcan_bridge/msg/: GoalEvent.msg  MitCmd.msg
src/atcan_bridge/src/: atcan_bridge.cpp  control.cpp
src/motor_control/: package.xml
src/motor_control/include/: serial.hpp  transform.hpp
src/motor_control/msg/: MitAt.msg
src/motor_control/src/: communication_node.cpp
src/robstride_core/: CMakeLists.txt
src/robstride_core/src/: at_bridge_cmd2at.cpp  control.cpp  csv_sequencer_node.cpp
trash/: package.xml
trash/include/robstride_core/: at_wire.hpp
trash/msg/: GoalEvent.msg  MitCmd.msg
trash/src/: at_bridge_cmd2at.cpp  control.cpp
(+18 files in other folders)
