<package format="3">
  <name>robstride_core</name>
  <version>0.0.1</version>
  <description>Robstride single-package: nodes + messages</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- ★ ここを追加（インターフェースを含むパッケージだと宣言） -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
